@@ -1,3 +1,6 @@
+2019-02-28  Kirit Saelensminde  <kirit@felspar.com>
+ Implement string conversion (ISO Zulu time) for `std::chrono::system_clock`
+
 2019-02-24  Kirit Saelensminde  <kirit@felspar.com>
  Add new nonce functions that return base64url formatted random data in ordered and un-ordered variants.
 
